--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 12:21:48 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 12:22:31 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -263,7 +263,7 @@ Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
       <td class="greyout leftborder">Tony Finau +4
-Not started</td>
+E thru 1</td>
       <td class="greyout">Patrick Cantlay +7
 -1 thru 8</td>
     </tr>
@@ -312,8 +312,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Viktor Hovland +3
 Not started</td>
-      <td class="greyout">Jon Rahm +7
-E thru 6</td>
+      <td class="greyout">Jon Rahm +6
+-1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunsets</td>
@@ -342,8 +342,8 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm(W) +7
-E thru 6</td>
+      <td class="greyout leftborder">Jon Rahm(W) +6
+-1 thru 7</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -358,10 +358,10 @@ Not started</td>
 Not started</td>
       <td>Robert MacIntyre +5
 -1 thru 5</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
+      <td class="greyout leftborder">Jon Rahm +6
+-1 thru 7</td>
+      <td class="greyout">Patrick Cantlay +7
 -1 thru 8</td>
-      <td class="greyout">Jon Rahm +7
-E thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
@@ -412,6 +412,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Matt Wilson</td>
+      <td class="bigbold">-4</td>
+      <td>Scottie Scheffler(W) -9
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Will Zalatoris +2
+Not started</td>
+      <td>Jon Rahm +6
+-1 thru 7</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jack Fleck</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith -6
@@ -444,22 +460,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Wilson</td>
-      <td class="bigbold">-3</td>
-      <td>Scottie Scheffler(W) -9
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Will Zalatoris +2
-Not started</td>
-      <td>Jon Rahm +7
-E thru 6</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -6
@@ -470,8 +470,8 @@ Not started</td>
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm(W) +7
-E thru 6</td>
+      <td class="greyout leftborder">Jon Rahm(W) +6
+-1 thru 7</td>
       <td class="greyout">Patrick Cantlay +7
 -1 thru 8</td>
     </tr>
@@ -486,9 +486,25 @@ Not started</td>
 Not started</td>
       <td>Talor Gooch +3
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm(W) +7
-E thru 6</td>
+      <td class="greyout leftborder">Jon Rahm(W) +6
+-1 thru 7</td>
       <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Lyle Rattray</td>
+      <td class="bigbold">-1</td>
+      <td>Scottie Scheffler -9
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Viktor Hovland +3
+Not started</td>
+      <td>Jon Rahm +6
+-1 thru 7</td>
+      <td class="greyout leftborder">Patrick Cantlay(W) +7
+-1 thru 8</td>
+      <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
     <tr>
@@ -508,19 +524,19 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Lyle Rattray</td>
-      <td class="bigbold">0</td>
-      <td>Scottie Scheffler -9
+      <td class="bigbold">Santorini Sunrises</td>
+      <td class="bigbold">1</td>
+      <td>Cameron Smith -6
 Not started</td>
-      <td>Corey Conners -1
+      <td>Corey Conners(W) -1
 Not started</td>
-      <td>Viktor Hovland +3
+      <td>Will Zalatoris +2
 Not started</td>
-      <td>Patrick Cantlay(W) +7
--1 thru 8</td>
-      <td class="greyout leftborder">Jon Rahm +7
-E thru 6</td>
-      <td class="greyout">Sam Burns
+      <td>Jon Rahm +6
+-1 thru 7</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -534,25 +550,25 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm +7
-E thru 6</td>
+      <td class="greyout leftborder">Jon Rahm +6
+-1 thru 7</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunrises</td>
-      <td class="bigbold">2</td>
-      <td>Cameron Smith -6
+      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">1</td>
+      <td>Scottie Scheffler -9
 Not started</td>
-      <td>Corey Conners(W) -1
+      <td>Rory McIlroy +1
 Not started</td>
-      <td>Will Zalatoris +2
+      <td>Viktor Hovland +3
 Not started</td>
-      <td>Jon Rahm +7
-E thru 6</td>
+      <td>Jon Rahm(W) +6
+-1 thru 7</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
-      <td class="greyout">Jordan Spieth
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -566,22 +582,6 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay +7
 -1 thru 8</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">2</td>
-      <td>Scottie Scheffler -9
-Not started</td>
-      <td>Rory McIlroy +1
-Not started</td>
-      <td>Viktor Hovland +3
-Not started</td>
-      <td>Jon Rahm(W) +7
-E thru 6</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -620,6 +620,22 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Glitter Girl</td>
+      <td class="bigbold">4</td>
+      <td>Cameron Smith -6
+Not started</td>
+      <td>Rory McIlroy +1
+Not started</td>
+      <td>Viktor Hovland +3
+Not started</td>
+      <td>Jon Rahm(W) +6
+-1 thru 7</td>
+      <td class="greyout leftborder">Bubba Watson +8
+E thru 7</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">4</td>
       <td>Shane Lowry(W) -2
@@ -652,32 +668,16 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">5</td>
-      <td>Cameron Smith -6
-Not started</td>
-      <td>Rory McIlroy +1
-Not started</td>
-      <td>Viktor Hovland +3
-Not started</td>
-      <td>Jon Rahm(W) +7
-E thru 6</td>
-      <td class="greyout leftborder">Bubba Watson +8
-E thru 7</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Brian McDonald</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">5</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
-      <td>Jon Rahm(W) +7
-E thru 6</td>
+      <td>Jon Rahm(W) +6
+-1 thru 7</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -691,7 +691,7 @@ Not started</td>
       <td>Dustin Johnson(W) +1
 Not started</td>
       <td>Tony Finau +4
-Not started</td>
+E thru 1</td>
       <td>Matthew Fitzpatrick +4
 E thru 1</td>
       <td class="greyout leftborder">Louis Oosthuizen
@@ -701,13 +701,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">9</td>
+      <td class="bigbold">8</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
-      <td>Jon Rahm(W) +7
-E thru 6</td>
+      <td>Jon Rahm(W) +6
+-1 thru 7</td>
       <td>Tiger Woods +9
 +2 thru 6</td>
       <td class="greyout leftborder">Sam Burns
@@ -717,15 +717,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">11</td>
+      <td class="bigbold">10</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
-      <td>Jon Rahm +7
-E thru 6</td>
+      <td>Jon Rahm +6
+-1 thru 7</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -733,15 +733,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">11</td>
+      <td class="bigbold">10</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
-      <td>Jon Rahm(W) +7
-E thru 6</td>
+      <td>Jon Rahm(W) +6
+-1 thru 7</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -749,18 +749,50 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">12</td>
+      <td class="bigbold">11</td>
       <td>Rory McIlroy(W) +1
 Not started</td>
       <td>Dustin Johnson +1
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
-      <td>Patrick Cantlay +7
+      <td>Jon Rahm +6
+-1 thru 7</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
 -1 thru 8</td>
-      <td class="greyout leftborder">Jon Rahm +7
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">11</td>
+      <td>Corey Conners(W) -1
+Not started</td>
+      <td>Collin Morikawa +1
+Not started</td>
+      <td>Robert MacIntyre +5
+-1 thru 5</td>
+      <td>Jon Rahm +6
+-1 thru 7</td>
+      <td class="greyout leftborder">Daniel Berger +7
 E thru 6</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">12</td>
+      <td>Collin Morikawa +1
+Not started</td>
+      <td>Will Zalatoris +2
+Not started</td>
+      <td>Viktor Hovland(W) +3
+Not started</td>
+      <td>Jon Rahm +6
+-1 thru 7</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 thru 8</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -780,48 +812,16 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">12</td>
-      <td>Corey Conners(W) -1
-Not started</td>
-      <td>Collin Morikawa +1
-Not started</td>
-      <td>Robert MacIntyre +5
--1 thru 5</td>
-      <td>Daniel Berger +7
-E thru 6</td>
-      <td class="greyout leftborder">Jon Rahm +7
-E thru 6</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Walk 1</td>
-      <td class="bigbold">13</td>
-      <td>Collin Morikawa +1
-Not started</td>
-      <td>Will Zalatoris +2
-Not started</td>
-      <td>Viktor Hovland(W) +3
-Not started</td>
-      <td>Patrick Cantlay +7
--1 thru 8</td>
-      <td class="greyout leftborder">Jon Rahm +7
-E thru 6</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">14</td>
+      <td class="bigbold">13</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
+      <td>Jon Rahm +6
+-1 thru 7</td>
       <td>Patrick Cantlay(W) +7
 -1 thru 8</td>
-      <td>Jon Rahm +7
-E thru 6</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -829,15 +829,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">15</td>
+      <td class="bigbold">14</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Viktor Hovland(W) +3
 Not started</td>
       <td>Patrick Reed +4
 Not started</td>
-      <td>Jon Rahm +7
-E thru 6</td>
+      <td>Jon Rahm +6
+-1 thru 7</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -845,13 +845,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">15</td>
+      <td class="bigbold">14</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Hideki Matsuyama +2
 Not started</td>
-      <td>Jon Rahm(W) +7
-E thru 6</td>
+      <td>Jon Rahm(W) +6
+-1 thru 7</td>
       <td>Patrick Cantlay +7
 -1 thru 8</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -861,31 +861,31 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">16</td>
+      <td class="bigbold">15</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
+      <td>Jon Rahm +6
+-1 thru 7</td>
       <td>Daniel Berger +7
 E thru 6</td>
-      <td>Patrick Cantlay +7
+      <td class="greyout leftborder">Patrick Cantlay +7
 -1 thru 8</td>
-      <td class="greyout leftborder">Jon Rahm +7
-E thru 6</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">17</td>
+      <td class="bigbold">16</td>
       <td>Collin Morikawa(W) +1
 Not started</td>
       <td>Hideki Matsuyama +2
 Not started</td>
+      <td>Jon Rahm +6
+-1 thru 7</td>
       <td>Patrick Cantlay +7
 -1 thru 8</td>
-      <td>Jon Rahm +7
-E thru 6</td>
       <td class="greyout leftborder">Paul Casey
 Out With Injury</td>
       <td class="greyout">Jordan Spieth
@@ -893,13 +893,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">19</td>
+      <td class="bigbold">18</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Tony Finau +4
-Not started</td>
-      <td>Jon Rahm(W) +7
-E thru 6</td>
+E thru 1</td>
+      <td>Jon Rahm(W) +6
+-1 thru 7</td>
       <td>Patrick Cantlay +7
 -1 thru 8</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -909,15 +909,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">20</td>
+      <td class="bigbold">19</td>
       <td>Dustin Johnson +1
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
+      <td>Jon Rahm +6
+-1 thru 7</td>
       <td>Patrick Cantlay +7
 -1 thru 8</td>
-      <td>Jon Rahm +7
-E thru 6</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
@@ -1057,8 +1057,8 @@ Missed Cut</td>
       <td class="bigbold greyout">Neville Spillman</td>
       <td class="bigbold greyout">-</td>
       <td class="greyout">Scottie Scheffler</td>
-      <td class="greyout">Patrick Cantlay</td>
       <td class="greyout">Jon Rahm</td>
+      <td class="greyout">Patrick Cantlay</td>
       <td class="greyout">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout leftborder">Sam Burns
