--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 12:21:48 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 12:22:31 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -151,7 +151,7 @@ Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
       <td class="greyout leftborder">Tony Finau +4
-Not started</td>
+E thru 1</td>
       <td class="greyout">Patrick Cantlay +7
 -1 thru 8</td>
     </tr>
@@ -169,6 +169,22 @@ Not started</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +4
 E thru 1</td>
       <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">-5</td>
+      <td>Scottie Scheffler(W) -9
+Not started</td>
+      <td>Shane Lowry -2
+Not started</td>
+      <td>Will Zalatoris +2
+Not started</td>
+      <td>Jon Rahm +6
+-1 thru 7</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -204,22 +220,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-4</td>
-      <td>Scottie Scheffler(W) -9
-Not started</td>
-      <td>Shane Lowry -2
-Not started</td>
-      <td>Will Zalatoris +2
-Not started</td>
-      <td>Jon Rahm +7
-E thru 6</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Scott Williamson</td>
       <td class="bigbold">-1</td>
       <td>Sungjae Im -4
@@ -237,15 +237,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">2</td>
       <td>Shane Lowry -2
 Not started</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
-      <td>Jon Rahm +7
-E thru 6</td>
+      <td>Jon Rahm +6
+-1 thru 7</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 thru 8</td>
       <td class="greyout">Tyrrell Hatton +11
@@ -293,7 +293,7 @@ Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
       <td>Tony Finau +4
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Daniel Berger +7
 E thru 6</td>
       <td class="greyout">Brooks Koepka
@@ -301,15 +301,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">12</td>
+      <td class="bigbold">11</td>
       <td>Corey Conners(W) -1
 Not started</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Robert MacIntyre +5
 -1 thru 5</td>
-      <td>Jon Rahm +7
-E thru 6</td>
+      <td>Jon Rahm +6
+-1 thru 7</td>
       <td class="greyout leftborder">Daniel Berger +7
 E thru 6</td>
       <td class="greyout">Jordan Spieth
@@ -317,15 +317,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">15</td>
+      <td class="bigbold">14</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Viktor Hovland(W) +3
 Not started</td>
       <td>Patrick Reed +4
 Not started</td>
-      <td>Jon Rahm +7
-E thru 6</td>
+      <td>Jon Rahm +6
+-1 thru 7</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Luke List
@@ -333,13 +333,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">19</td>
+      <td class="bigbold">18</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Tony Finau +4
-Not started</td>
-      <td>Jon Rahm(W) +7
-E thru 6</td>
+E thru 1</td>
+      <td>Jon Rahm(W) +6
+-1 thru 7</td>
       <td>Patrick Cantlay +7
 -1 thru 8</td>
       <td class="greyout leftborder">Jordan Spieth
@@ -349,15 +349,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">20</td>
+      <td class="bigbold">19</td>
       <td>Dustin Johnson +1
 Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
+      <td>Jon Rahm +6
+-1 thru 7</td>
       <td>Patrick Cantlay +7
 -1 thru 8</td>
-      <td>Jon Rahm +7
-E thru 6</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
