--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 12:26:06 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 12:26:49 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -509,15 +509,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Uphill into the Wind</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">0</td>
       <td>Scottie Scheffler(W) -9
 Not started</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Patrick Cantlay +7
 -1 thru 8</td>
-      <td>Billy Horschel +9
--1 thru 9</td>
+      <td>Billy Horschel +10
+E thru 10</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
