--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 12:33:16 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 12:33:59 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -828,22 +828,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">14</td>
-      <td>Collin Morikawa +1
-Not started</td>
-      <td>Viktor Hovland(W) +3
-Not started</td>
-      <td>Patrick Reed +4
-Not started</td>
-      <td>Jon Rahm +6
--1 thru 7</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Roy Jeffrey A</td>
       <td class="bigbold">14</td>
       <td>Justin Thomas -1
@@ -873,6 +857,22 @@ E thru 7</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 thru 8</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">15</td>
+      <td>Collin Morikawa +1
+Not started</td>
+      <td>Viktor Hovland(W) +3
+Not started</td>
+      <td>Patrick Reed +5
++1 thru 1</td>
+      <td>Jon Rahm +6
+-1 thru 7</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
