--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 12:49:04 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 12:49:47 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -150,8 +150,8 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
-      <td class="greyout leftborder">Tony Finau +4
-E thru 2</td>
+      <td class="greyout leftborder">Tony Finau +5
++1 thru 3</td>
       <td class="greyout">Patrick Cantlay +6
 -2 thru 10</td>
     </tr>
@@ -285,17 +285,17 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">7</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Collin Morikawa +1
 Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
-      <td>Tony Finau +4
-E thru 2</td>
-      <td class="greyout leftborder">Daniel Berger +7
-E thru 7</td>
+      <td>Tony Finau +5
++1 thru 3</td>
+      <td class="greyout leftborder">Daniel Berger +6
+-1 thru 8</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -310,8 +310,8 @@ Not started</td>
 -2 thru 7</td>
       <td>Jon Rahm +5
 -2 thru 8</td>
-      <td class="greyout leftborder">Daniel Berger +7
-E thru 7</td>
+      <td class="greyout leftborder">Daniel Berger +6
+-1 thru 8</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -325,7 +325,7 @@ Not started</td>
       <td>Jon Rahm +5
 -2 thru 8</td>
       <td>Patrick Reed +5
-+1 thru 1</td>
++1 thru 2</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Luke List
@@ -333,13 +333,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">16</td>
+      <td class="bigbold">17</td>
       <td>Collin Morikawa +1
 Not started</td>
-      <td>Tony Finau +4
-E thru 2</td>
       <td>Jon Rahm(W) +5
 -2 thru 8</td>
+      <td>Tony Finau +5
++1 thru 3</td>
       <td>Patrick Cantlay +6
 -2 thru 10</td>
       <td class="greyout leftborder">Jordan Spieth
