--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:17:14 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:17:57 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -197,7 +197,7 @@ Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Will Zalatoris +3
-+1 thru 3</td>
++1 thru 4</td>
       <td class="greyout leftborder">Russell Henley +4
 -3 thru 14</td>
       <td class="greyout">Brooks Koepka
@@ -221,15 +221,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Doug Muir</td>
-      <td class="bigbold">-11</td>
+      <td class="bigbold">-12</td>
       <td>Scottie Scheffler(W) -9
 Not started</td>
       <td>Cameron Smith -6
 Not started</td>
-      <td>Hideki Matsuyama +3
-+1 thru 4</td>
+      <td>Hideki Matsuyama +2
+E thru 5</td>
       <td>Will Zalatoris +3
-+1 thru 3</td>
++1 thru 4</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -247,7 +247,7 @@ Not started</td>
       <td>Viktor Hovland +3
 E thru 4</td>
       <td class="greyout leftborder">Will Zalatoris +3
-+1 thru 3</td>
++1 thru 4</td>
       <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
@@ -261,7 +261,7 @@ Not started</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Will Zalatoris +3
-+1 thru 3</td>
++1 thru 4</td>
       <td class="greyout leftborder">Tony Finau +5
 +1 thru 9</td>
       <td class="greyout">Patrick Cantlay +7
@@ -300,6 +300,22 @@ E thru 4</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">The Resort</td>
+      <td class="bigbold">-7</td>
+      <td>Cameron Smith(W) -6
+Not started</td>
+      <td>Shane Lowry -2
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Hideki Matsuyama +2
+E thru 5</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+E thru 4</td>
+      <td class="greyout">Jon Rahm +4
+-3 thru 14</td>
+    </tr>
+    <tr>
       <td class="bigbold">Tom Davis</td>
       <td class="bigbold">-7</td>
       <td>Cameron Smith -6
@@ -316,6 +332,22 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Bill Hunter</td>
+      <td class="bigbold">-6</td>
+      <td>Cameron Smith(W) -6
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Hideki Matsuyama +2
+E thru 5</td>
+      <td class="greyout leftborder">Marc Leishman +5
++2 thru 6</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-6</td>
       <td>Cameron Smith -6
@@ -325,27 +357,11 @@ Not started</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Will Zalatoris +3
-+1 thru 3</td>
++1 thru 4</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +5
 +1 thru 10</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">The Resort</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith(W) -6
-Not started</td>
-      <td>Shane Lowry -2
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Viktor Hovland +3
-E thru 4</td>
-      <td class="greyout leftborder">Hideki Matsuyama +3
-+1 thru 4</td>
-      <td class="greyout">Jon Rahm +4
--3 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Baggy Pants</td>
@@ -364,22 +380,6 @@ E thru 4</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Albert Selina</td>
-      <td class="bigbold">-5</td>
-      <td>Scottie Scheffler -9
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Webb Simpson +2
-E thru 3</td>
-      <td>Will Zalatoris +3
-+1 thru 3</td>
-      <td class="greyout leftborder">Jon Rahm(W) +4
--3 thru 14</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Matt Wilson</td>
       <td class="bigbold">-5</td>
       <td>Scottie Scheffler(W) -9
@@ -387,7 +387,7 @@ Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Will Zalatoris +3
-+1 thru 3</td>
++1 thru 4</td>
       <td>Jon Rahm +4
 -3 thru 14</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -412,34 +412,34 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Bill Hunter</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith(W) -6
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Hideki Matsuyama +3
-+1 thru 4</td>
-      <td class="greyout leftborder">Marc Leishman +5
-+2 thru 6</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-4</td>
+      <td class="bigbold">-5</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Rory McIlroy(W) E
 -1 thru 1</td>
-      <td>Hideki Matsuyama +3
-+1 thru 4</td>
+      <td>Hideki Matsuyama +2
+E thru 5</td>
       <td class="greyout leftborder">Tiger Woods +11
 +4 thru 14</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Albert Selina</td>
+      <td class="bigbold">-4</td>
+      <td>Scottie Scheffler -9
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Webb Simpson +3
++1 thru 4</td>
+      <td>Will Zalatoris +3
++1 thru 4</td>
+      <td class="greyout leftborder">Jon Rahm(W) +4
+-3 thru 14</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -457,6 +457,22 @@ E thru 4</td>
       <td class="greyout leftborder">Patrick Cantlay(W) +7
 -1 thru 16</td>
       <td class="greyout">Sam Burns
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ron Harrington</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith -6
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Talor Gooch +2
+-1 thru 6</td>
+      <td>Hideki Matsuyama +2
+E thru 5</td>
+      <td class="greyout leftborder">Jon Rahm(W) +4
+-3 thru 14</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -508,22 +524,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Ron Harrington</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith -6
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Talor Gooch +2
--1 thru 6</td>
-      <td>Hideki Matsuyama +3
-+1 thru 4</td>
-      <td class="greyout leftborder">Jon Rahm(W) +4
--3 thru 14</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
       <td class="bigbold">-1</td>
       <td>Cameron Smith -6
@@ -533,7 +533,7 @@ Not started</td>
       <td>Viktor Hovland +3
 E thru 4</td>
       <td>Will Zalatoris +3
-+1 thru 3</td>
++1 thru 4</td>
       <td class="greyout leftborder">Jon Rahm(W) +4
 -3 thru 14</td>
       <td class="greyout">Patrick Cantlay +7
@@ -547,7 +547,7 @@ Not started</td>
       <td>Corey Conners(W) -1
 Not started</td>
       <td>Will Zalatoris +3
-+1 thru 3</td>
++1 thru 4</td>
       <td>Jon Rahm +4
 -3 thru 14</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -565,7 +565,7 @@ Not started</td>
       <td>Rory McIlroy E
 -1 thru 1</td>
       <td>Will Zalatoris +3
-+1 thru 3</td>
++1 thru 4</td>
       <td class="greyout leftborder">Jon Rahm +4
 -3 thru 14</td>
       <td class="greyout">Brooks Koepka
@@ -627,7 +627,7 @@ Not started</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Will Zalatoris +3
-+1 thru 3</td>
++1 thru 4</td>
       <td>Patrick Cantlay +7
 -1 thru 16</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -647,7 +647,7 @@ E thru 1</td>
       <td>Viktor Hovland +3
 E thru 4</td>
       <td class="greyout leftborder">Will Zalatoris +3
-+1 thru 3</td>
++1 thru 4</td>
       <td class="greyout">Tiger Woods(W) +11
 +4 thru 14</td>
     </tr>
@@ -679,7 +679,7 @@ E thru 1</td>
       <td>Viktor Hovland +3
 E thru 4</td>
       <td class="greyout leftborder">Will Zalatoris +3
-+1 thru 3</td>
++1 thru 4</td>
       <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
@@ -739,7 +739,7 @@ Not started</td>
       <td>Viktor Hovland +3
 E thru 4</td>
       <td>Will Zalatoris +3
-+1 thru 3</td>
++1 thru 4</td>
       <td>Jon Rahm +4
 -3 thru 14</td>
       <td class="greyout leftborder">Sam Burns
@@ -755,7 +755,7 @@ Not started</td>
       <td>Viktor Hovland +3
 E thru 4</td>
       <td>Will Zalatoris +3
-+1 thru 3</td>
++1 thru 4</td>
       <td>Jon Rahm(W) +4
 -3 thru 14</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -803,12 +803,28 @@ E thru 1</td>
       <td>Viktor Hovland(W) +3
 E thru 4</td>
       <td>Will Zalatoris +3
-+1 thru 3</td>
++1 thru 4</td>
       <td>Jon Rahm +4
 -3 thru 14</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 thru 16</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">12</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Hideki Matsuyama +2
+E thru 5</td>
+      <td>Jon Rahm(W) +4
+-3 thru 14</td>
+      <td>Patrick Cantlay +7
+-1 thru 16</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -828,28 +844,12 @@ E thru 4</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">13</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Hideki Matsuyama +3
-+1 thru 4</td>
-      <td>Jon Rahm(W) +4
--3 thru 14</td>
-      <td>Patrick Cantlay +7
--1 thru 16</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">15</td>
+      <td class="bigbold">14</td>
       <td>Collin Morikawa(W) +1
 E thru 1</td>
-      <td>Hideki Matsuyama +3
-+1 thru 4</td>
+      <td>Hideki Matsuyama +2
+E thru 5</td>
       <td>Jon Rahm +4
 -3 thru 14</td>
       <td>Patrick Cantlay +7
